Upgrade Tomcat and deployer config. Added default security Policies.